<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AlchemyAPI_Android_TestApp!</string>
    <string name="app_name">Lab4_Alchemy</string>
    <string name="menu_concepts">Analyze for Concepts</string>
    <string name="menu_entities">Analyze for Entities</string>
    <string name="menu_keywords">Analyze for Keywords</string>
    <string name="button_concepts">Concepts</string>
    <string name="button_entities">Entities</string>
    <string name="button_keywords">Keywords</string>
    <string name="button_text">Text</string>
    <string name="button_sentiment">Sentiment</string>
    <string name="button_taxonomy">Taxonomy</string>
    <string name="button_image">Image Extraction</string>
    <string name="button_combined">Combined</string>
    <string name="button_image_classify">Classify Image</string>
    <string name="kitten">Kitten</string>
</resources>
