<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/holo_orange_dark"
    >
    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Enter URL:"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:id="@+id/entry"
        android:layout_below="@+id/label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
        
   <Button
     android:id="@+id/concept_button"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/button_concepts"
     android:layout_below="@id/entry"/>
     
   <Button
     android:id="@+id/entity_button"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/button_entities"
     android:layout_below="@id/entry"
     android:layout_toRightOf="@id/concept_button" />
     
   <Button
   	 android:id="@+id/text_button"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/button_text"
     android:layout_below="@id/concept_button" />

  <Button
      android:id="@+id/image_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/text_button"
      android:text="@string/button_image" />

  <Button
      android:id="@+id/combined_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/TextView01"
      android:layout_alignRight="@+id/keyword_button"
      android:text="@string/button_combined" />

  <Button
      android:id="@+id/keyword_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/taxonomy_button"
      android:layout_toRightOf="@+id/entity_button"
      android:text="@string/button_keywords" />

  <Button
      android:id="@+id/sentiment_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/image_button"
      android:layout_toLeftOf="@+id/keyword_button"
      android:text="@string/button_sentiment" />

  <Button
      android:id="@+id/taxonomy_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/combined_button"
      android:layout_alignLeft="@+id/keyword_button"
      android:text="@string/button_taxonomy" />

  <TextView
      android:id="@+id/TextView01"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true"
      android:layout_alignRight="@+id/button_image_classify"
      android:layout_below="@+id/image_button"
      android:layout_marginTop="105dp"
      android:scrollbars="vertical"
      android:text="@+id/TextView01" />

  <Button
      android:id="@+id/button_image_classify"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:text="@string/button_image_classify"
      android:layout_below="@+id/image_button" />

  <ImageView
      android:id="@+id/imageView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/kitten"
      android:src="@drawable/kitten"
      android:layout_below="@+id/button_image_classify"
      android:layout_toRightOf="@+id/sentiment_button"
      android:layout_toEndOf="@+id/sentiment_button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="123dp"
        android:layout_marginStart="123dp" />


</RelativeLayout>
